--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+# MAKE SURE TO LEAVE THE DENY LIST AT THE TOP OF THE FILE !!!
+# BEGIN DENY LIST --
+# END DENY LIST --
 Options +FollowSymLinks
 Options -Indexes
 DirectoryIndex index.html index.php
